Hipervinculos y estilos a sección de "Paginas" del footer

--- a/Pagina WEB/footer.html
+++ b/Pagina WEB/footer.html
@@ -10,17 +10,17 @@
 
 <body>
     <div class="Redes">
-        <img src="img/logoFooter.svg" alt="">
+        <a href="index.php"><img src="img/logoFooter.svg" alt=""></a>
         <div class="Contacto">
             <p>CONTÁCTO</p>
             <p>CEL - 4435954101</p>
             <p>CORREO - contacto@mezcalion.com</p>
         </div>
         <div class="Paginas">
-            <p>PRODUCTOS</p>
-            <p>NOSOTROS</p>
-            <p>LOGIN</p>
-            <p>CARRITO</p>
+            <a href="productos.php">PRODUCTOS</a>
+            <a href="nosotros.html">NOSOTROS</a>
+            <a href="perfil.php">LOGIN</a>
+            <a href="carrito.php">CARRITO</a>
         </div>
         <img src="img/paypal-credit-card.svg" alt="">
         <footer>
