--- a/Pagina WEB/chatgpt.html
+++ b/Pagina WEB/chatgpt.html
@@ -4,38 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asistente Mezcalion</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-        }
-        .chat-box {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin-bottom: 10px;
-            height: 300px;
-            overflow-y: scroll;
-        }
-        .input-box {
-            display: flex;
-        }
-        .input-box textarea {
-            width: 80%;
-            height: 50px;
-            padding: 10px;
-            margin-right: 10px;
-        }
-        .input-box button {
-            width: 20%;
-            height: 50px;
-        }
-    </style>
+    <link rel="stylesheet" href="estilos.css"/>
 </head>
 <body>
+    <style>
+        body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f4f4f4;
+}
+
+.container {
+  width: 100%;
+  max-width: 350px;
+  position: relative;
+}
+
+    </style>
     <div class="container">
         <div class="chat-box" id="chat-box">
             <!-- Aquí se mostrarán las conversaciones -->
